# EdaDeal2.0-StoreParser

./: Makefile  docker-compose.yaml  main.py  pyproject.toml  readme.MD
app/: main.py
app/db/: config.py  models.py
app/db/queries/: orm.py
app/parser/: sbermarket_store_parser.py
db/: config.py  database.py
db/queries/: orm.py
docker/parser/: dockerfile
parser/: sbermarket_store_parser.py
