[tool.poetry]
name = "edadeal2-0-store-parser"
version = "0.1.0"
description = ""
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
tqdm = "^4.66.4"
nodriver = "^0.29rc2"
psycopg = "^3.1.19"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
psycopg-binary = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
